# src/controllers/auth.controller.ts
@@ -22,7 +22,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password min 6 characters")
+    .test(
+      "at-least-one-uppercase",
+      "Password must contain at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      },
+    )
+    .test(
+      "at-least-one-number",
+      "Password must contain at least one number",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      },
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password")], "Passwords not match"),
@@ -30,6 +50,12 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+     #swagger.requestBody = {
+       required: true,
+       schema: {$ref: "#/components/schemas/RegisterRequest"}
+      }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -73,6 +99,7 @@ export default {
 
       const userByIdentifier = await UserModel.findOne({
         $or: [{ username: identifier }, { email: identifier }],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -91,6 +118,11 @@ export default {
         id: userByIdentifier._id,
         role: userByIdentifier.role,
       });
+
+      //   {
+      //   id: userByIdentifier.id,
+      //   role: userByIdentifier.role,
+      // });
 
       res.status(200).json({
         message: "Success login!",
@@ -114,6 +146,33 @@ export default {
       res.status(200).json({
         message: "Success get user data!",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({ message: err.message, data: null });
+    }
+  },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+       required: true,
+       schema: {$ref: "#/components/schemas/ActivationRequest"}
+      }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        { isActive: true },
+        { new: true },
+      );
+      res.status(200).json({
+        message: "Account successfully activated!",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
