# src/models/user.model.ts
@@ -1,6 +1,10 @@
 import mongoose from "mongoose";
 import { encrypt } from "../utils/encryption";
 
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
+import { IUserToken } from "../utils/jwt";
+
 export interface User {
   fullName: string;
   username: string;
@@ -10,6 +14,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activationCode: string;
+  createdAt?: string;
 }
 
 const Schema = mongoose.Schema;
@@ -17,8 +22,8 @@ const Schema = mongoose.Schema;
 const UserSchema = new Schema<User>(
   {
     fullName: { type: Schema.Types.String, required: true },
-    username: { type: Schema.Types.String, required: true },
-    email: { type: Schema.Types.String, required: true },
+    username: { type: Schema.Types.String, required: true, unique: true },
+    email: { type: Schema.Types.String, required: true, unique: true },
     password: { type: Schema.Types.String, required: true },
     role: {
       type: Schema.Types.String,
@@ -32,9 +37,36 @@ const UserSchema = new Schema<User>(
   { timestamps: true }
 );
 
-UserSchema.pre("save", function (this: User) {
-  const user = this;
-  user.password = encrypt(user.password);
+UserSchema.pre("save", async function () {
+  // const user = this;
+  this.password = encrypt(this.password);
+  this.activationCode = encrypt(this.id);
+});
+
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+
+    console.log("Send Email to:", user.email);
+
+    const contentMail = await renderMailHtml("registration-success.ejs", {
+      username: user.username,
+      fullName: user.fullName,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
+    });
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Aktivasi Akun Anda",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.log(error);
+  } finally {
+    next();
+  }
 });
 
 UserSchema.methods.toJSON = function () {
